fix overflow

--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -6,6 +6,7 @@
 
   @include vp-767 {
     padding: 30px;
+    max-width: 290px;
   }
 
   h3 {
