--- a/source/sass/blocks/menu-footer.scss
+++ b/source/sass/blocks/menu-footer.scss
@@ -19,6 +19,7 @@
 
     @include vp-767 {
       flex-direction: column;
+      min-width: 270px;
     }
   }
 
